# Verif-AI-Final

./: .gitmodules  README.md
EDA-and-Modeling/: Evaluate_Model.ipynb  Lang-Graph-Agents.ipynb  Pipeline-Check.ipynb  README.md  verifai_model_pipeline.py
EDA-and-Modeling/Archive/: LLAMA-2_Verifiability_Check.ipynb  README.md  langgraph.ipynb
politifact-web-scraper/: README.md  pyproject.toml  run.sh  scrapy.cfg
politifact-web-scraper/politifact/: items.py  middlewares.py  pipelines.py  settings.py
politifact-web-scraper/politifact/spiders/: politifact_spider.py
