[tool.poetry]
name = "politifact-web-scraper"
version = "0.1.0"
description = "Runs a web scraper through PolitiFact.com"
authors = ["Steven Sung <sysung98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.1"
requests = "^2.31.0"
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
